<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_nav_home"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/nav_progress"
        android:icon="@drawable/ic_nav_progress"
        android:title="@string/nav_progress" />
    <item
        android:id="@+id/nav_journey"
        android:icon="@drawable/ic_nav_journey"
        android:title="@string/nav_journey" />
    <item
        android:id="@+id/nav_calendar"
        android:icon="@drawable/ic_nav_calendar"
        android:title="@string/nav_calendar" />
    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_nav_settings"
        android:title="@string/nav_settings" />
</menu>
